--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-ms-adal",
-  "version": "0.10.1",
+  "name": "cordova-plugin-ms-adal-is-back",
+  "version": "0.10.3",
   "description": "Provides Microsoft Azure Active Directory (ADAL) OAuth client.",
   "cordova": {
-    "id": "cordova-plugin-ms-adal",
+    "id": "cordova-plugin-ms-adal-is-back",
     "platforms": [
       "android",
       "ios",
@@ -37,6 +37,16 @@
         "cordova-windows": ">=4.1.0",
         "cordova": ">=5.4.0"
       },
+      "0.10.2": {
+        "cordova-android": ">=4.1.0",
+        "cordova-windows": ">=4.1.0",
+        "cordova": ">=5.4.0"
+      },
+      "0.10.3": {
+        "cordova-android": ">=4.1.0",
+        "cordova-windows": ">=4.1.0",
+        "cordova": ">=5.4.0"
+      },
       "1.0.0": {
         "cordova": ">=100"
       }
@@ -44,7 +54,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AzureAD/azure-activedirectory-library-for-cordova.git"
+    "url": "git+https://github.com/Perroquiet/azure-activedirectory-library-for-cordova.git"
   },
   "keywords": [
     "microsoft",
@@ -59,7 +69,7 @@
   "author": "MSOpenTech",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/AzureAD/azure-activedirectory-library-for-cordova/issues"
+    "url": "https://github.com/Perroquiet/azure-activedirectory-library-for-cordova/issues"
   },
-  "homepage": "https://github.com/AzureAD/azure-activedirectory-library-for-cordova#readme"
+  "homepage": "https://github.com/Perroquiet/azure-activedirectory-library-for-cordova#readme"
 }
