--- a/plugin.xml
+++ b/plugin.xml
@@ -124,6 +124,8 @@
                 </dict>
             </array>
         </config-file>
+        <!-- Add in the swift-support plugin by default -->
+        <dependency id="cordova-plugin-add-swift-support" version="2.0.2"/>
     </platform>
 
     <platform name="windows">
